Andet forsøg på menu

--- a/ommig.html
+++ b/ommig.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="js/java.js" />
+    <script src="js/java.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -28,9 +28,9 @@
         </div>
       </div>
       <!-- knab til at vise overlay navigationen -->
-      <span onclick="openNav()">open</span>
+      <span onclick="openNav()">Projekter</span>
 
-      <script>
+      <!-- <script>
         function openNav() {
           document.getElementById("myNav").style.width = "100%";
         }
@@ -38,7 +38,7 @@
         function closeNav() {
           document.getElementById("myNav").style.width = "0%";
         }
-      </script>
+      </script> -->
     </header>
     <main>
       <h1>Om mig</h1>
