opstart af website side

--- a/ommig.html
+++ b/ommig.html
@@ -29,24 +29,29 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
-
-      <!-- <script>
-        function openNav() {
-          document.getElementById("myNav").style.width = "100%";
-        }
-
-        function closeNav() {
-          document.getElementById("myNav").style.width = "0%";
-        }
-      </script> -->
     </header>
     <main>
       <h1>Om mig</h1>
-      <h2>Uddanelse</h2>
-      <p></p>
       <img src="" alt="" />
+      <h2>Uddanelse</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+        dolorem labore error iste repellat optio sequi cumque expedita, hic
+        voluptates eligendi enim totam consequatur!
+      </p>
       <h2>Erfaring</h2>
-      <p></p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas,
+        error. Consequatur blanditiis soluta ipsum ipsa illum a deserunt,
+        tenetur veniam culpa commodi, cupiditate magnam.
+      </p>
+      <h2>Hobby</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, natus
+        deserunt sit quos eos voluptatibus ipsa perspiciatis laudantium
+        molestiae labore? Saepe tenetur ea exercitationem animi commodi
+        voluptates. Dolore, saepe doloribus!
+      </p>
     </main>
     <footer></footer>
   </body>
