--- a/website.html
+++ b/website.html
@@ -3,11 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Website</title>
   </head>
   <body>
     <header></header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <h1>Website</h1>
+      <h2>Tema</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore dolores
+        quaerat corporis autem nobis veniam, ducimus debitis quam unde atque
+        tempore labore, praesentium hic sit? Adipisci minus placeat quibusdam
+        animi totam quos natus voluptates? Facere animi eaque autem maxime,
+        delectus alias praesentium ratione, ad beatae repudiandae optio ipsum
+        impedit eveniet omnis nobis vitae iste dolore quis laboriosam tempora
+        repellat in mollitia?
+      </p>
+      <h3>Opgave</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+        tenetur in assumenda doloribus laboriosam, enim minus nemo vitae quam
+        autem, nesciunt harum voluptatem itaque eligendi!
+      </p>
+      <h4>Wireframes</h4>
+      <img src="img/wireframe_website.png" alt="" />
+      <h4>Layoutdiagram</h4>
+      <img src="img/layoutdiagram_website.png" alt="" />
+      <h4>html</h4>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
+        delectus vitae nisi recusandae, laudantium ut.
+      </p>
+      <img src="" alt="" />
+      <h4>css</h4>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
+        repudiandae aut. Aspernatur ad esse qui?
+      </p>
+      <img src="" alt="" />
+      <h4>Se det færdige produkt her:</h4>
+      <a href=""></a>
+      <a href="https://idaholmterp.dk/02_web/01_website/website/index.html"
+        >Website</a
+      >
+    </main>
+    <footer>
+      <p>Portfolioeksamen</p>
+      <p>2024</p>
+      <p>Ida Holm Terp</p>
+    </footer>
   </body>
 </html>
