billede på om mig siden

--- a/website.html
+++ b/website.html
@@ -43,28 +43,33 @@
       </p>
       <h3>Opgave</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-        tenetur in assumenda doloribus laboriosam, enim minus nemo vitae quam
-        autem, nesciunt harum voluptatem itaque eligendi!
+        I website opgaven skulle vi lave et website ud fra udleveret wireframes
+        og layoutsiagrammer. Dette skulle vi gøre ved brug af HTML til at
+        opbygge siden, og CSS til styling og layout.
       </p>
-      <h4>Wireframes</h4>
-      <img src="img/wireframe_website.png" alt="" />
-      <h4>Layoutdiagram</h4>
-      <img src="img/layoutdiagram_website.png" alt="" />
-      <h4>html</h4>
+      <section class="grid_1-1">
+        <div>
+          <h4>Wireframes</h4>
+          <img src="img/wireframe_website.png" alt="" />
+        </div>
+        <div>
+          <h4>Layoutdiagram</h4>
+          <img src="img/layoutdiagram_website.png" alt="" />
+        </div>
+      </section>
+      <h4>HTML</h4>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
         delectus vitae nisi recusandae, laudantium ut.
       </p>
       <img src="" alt="" />
-      <h4>css</h4>
+      <h4>CSS</h4>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
         repudiandae aut. Aspernatur ad esse qui?
       </p>
       <img src="" alt="" />
       <h4>Se det færdige produkt her:</h4>
-      <a href=""></a>
       <a href="https://idaholmterp.dk/02_web/01_website/website/index.html"
         >Website</a
       >
