--- a/ommig.html
+++ b/ommig.html
@@ -30,7 +30,7 @@
     </header>
     <main>
       <h1>Om mig</h1>
-      <img src="" alt="" />
+      <img src="img/potrat.jpeg" alt="Potræt" />
       <h2>Uddanelse</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
