Billede på forside

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/java.js"></script>
+    <title>Forside</title>
   </head>
   <body>
     <header></header>
-    <main></main>
-    <footer></footer>
+    <main><img src="img/forside.webp" alt="Portfolio illustration" /></main>
+    <footer class="grid_1-1-1">
+      <p>Portfolioeksamen</p>
+      <p>2024</p>
+      <p>Ida Holm Terp</p>
+    </footer>
   </body>
 </html>
