--- a/ommig.html
+++ b/ommig.html
@@ -30,13 +30,17 @@
     </header>
     <main>
       <h1>Om mig</h1>
-      <img src="img/potrat.jpeg" alt="Potræt" />
-      <h2>Uddanelse</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-        dolorem labore error iste repellat optio sequi cumque expedita, hic
-        voluptates eligendi enim totam consequatur!
-      </p>
+      <div class="grid_1-2">
+        <img src="img/potrat.jpeg" alt="Potræt" />
+        <div>
+          <h2>Uddanelse</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+            dolorem labore error iste repellat optio sequi cumque expedita, hic
+            voluptates eligendi enim totam consequatur!
+          </p>
+        </div>
+      </div>
       <h2>Erfaring</h2>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas,
@@ -51,6 +55,10 @@
         voluptates. Dolore, saepe doloribus!
       </p>
     </main>
-    <footer></footer>
+    <footer class="grid_1-1-1">
+      <p>Portfolioeksamen</p>
+      <p>2024</p>
+      <p>Ida Holm Terp</p>
+    </footer>
   </body>
 </html>
