--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
     <title>Forside</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <!-- overlay -->
+      <div id="myNav" class="overlay">
+        <!-- knap til at lukke overlay navigationen -->
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+          >&times;</a
+        >
+        <!-- navigation (overlay content)-->
+        <div class="overlay-content">
+          <a href="website.html">Tema 2</a>
+          <a href="emnesite.html">Tema 3</a>
+          <a href="spil.html">Tema 4</a>
+          <a href="passion.html">Tema 5 opgave 1</a>
+          <a href="virksomhedsite.html">Tema 5 opgave 2</a>
+        </div>
+      </div>
+      <!-- knab til at vise overlay navigationen -->
+      <span onclick="openNav()">Projekter</span>
+    </header>
     <main><img src="img/forside.webp" alt="Portfolio illustration" /></main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
