--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Forside</title>
   </head>
   <body>
-    <header>
+    <header class="grid_1-1">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -27,8 +27,12 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
+      <a href="ommig.html" class="ommig">Om mig</a>
     </header>
-    <main><img src="img/forside.webp" alt="Portfolio illustration" /></main>
+    <main>
+      <img id="mobil" src="img/forsidem.webp" alt="Portfolio illustation" />
+      <img id="computer" src="img/forside.webp" alt="Portfolio illustration" />
+    </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
       <p>2024</p>
