--- a/emnesite.html
+++ b/emnesite.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/java.js"></script>
-    <title>Document</title>
+    <title>Emnesite</title>
   </head>
   <body>
     <header>
@@ -30,7 +30,56 @@
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
     </header>
-    <main></main>
+    <main>
+      <h1>Emnesite</h1>
+      <h2>Tema</h2>
+      <p>
+        Temaet hvavde til formål at give erfaring med udvalgte UX/UI-metoder og
+        lære at præsentere vores design- og udviklingsproces samt formidle
+        research- og testresultater til interessenter.
+      </p>
+      <h3>Opgave</h3>
+      <p>
+        For at få erfaring med overstående fik vi 4 uger til at lavet et website
+        om et valgfrit emne.
+      </p>
+      <h3>research og idé</h3>
+      <p>
+        I starten af processen for emnesitet gik vi igang med idégenering som
+        tog form af en brainstorm for emnet på sitete. Her valgte jeg emnet
+        hækle. Derefter gik vi igang med at udforme ideèn i form af moodboard og
+        stylyetile, for at finde udtrykket for sitet.
+      </p>
+      <section class="grid_1-1">
+        <div>
+          <h4>Moodboard</h4>
+          <img src="img/moodboard.webp" alt="Moodboard" />
+        </div>
+        <div>
+          <h4>Styletile</h4>
+          <img src="img/styletile.webp" alt="Styletile" />
+        </div>
+      </section>
+      <h3>Digital prototype</h3>
+      <p>
+        Efter at havde lavet research, lavede jeg en digital klikbar prototype
+        for at se hvordan sitet ville udforme sig.
+      </p>
+      <h3>Kodet site</h3>
+      <p>
+        Udfra min digitale prototype begyndte jeg at kode mit site med html og
+        css. Html for at lave strukturen i sitet og css for at style og lave
+        layout. Ny css jeg lærte i dette tema var at implementere fonte og at
+        lave et dynamisk galleri, hvor billederne blender sammen frem for at
+        blive inde for grid linjerne.
+      </p>
+      <h3>Præsentation</h3>
+      <p></p>
+      <h4>Se det færdige produkt her:</h4>
+      <a href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
+        >Website</a
+      >
+    </main>
     <footer></footer>
   </body>
 </html>
