mere indhold til html

--- a/emnesite.html
+++ b/emnesite.html
@@ -80,6 +80,10 @@
         >Website</a
       >
     </main>
-    <footer></footer>
+    <footer class="grid_1-1-1">
+      <p>Portfolioeksamen</p>
+      <p>2024</p>
+      <p>Ida Holm Terp</p>
+    </footer>
   </body>
 </html>
