--- a/passion.html
+++ b/passion.html
@@ -34,16 +34,22 @@
       <h1>Passionsite</h1>
       <h2>Tema</h2>
       <h3>Opgave</h3>
-      <h2>Forbereding til opgavelse</h2>
-      <h2>Optagelse</h2>
-      <h2>Video</h2>
-      <h2>Billeder</h2>
-      <h2>Kode</h2>
+      <h4>Forbereding til opgavelse</h4>
+      <h4>Optagelse</h4>
+      <h4>Video</h4>
+      <h4>Billeder</h4>
+      <h4>Hero section</h4>
+
+      <h4>Kode</h4>
       <h4>Se det færdige produkt her:</h4>
       <a href="https://idaholmterp.dk/kea/04_animation/website/index.html"
         >Website</a
       >
     </main>
-    <footer></footer>
+    <footer class="grid_1-1-1">
+      <p>Portfolioeksamen</p>
+      <p>2024</p>
+      <p>Ida Holm Terp</p>
+    </footer>
   </body>
 </html>
