Billeder til emnesite

--- a/emnesite.html
+++ b/emnesite.html
@@ -65,6 +65,7 @@
         Efter at havde lavet research, lavede jeg en digital klikbar prototype
         for at se hvordan sitet ville udforme sig.
       </p>
+      <img src="img/prototype_em.webp" alt="Prototype emnesite" />
       <h3>Kodet site</h3>
       <p>
         Udfra min digitale prototype begyndte jeg at kode mit site med html og
@@ -73,6 +74,9 @@
         lave et dynamisk galleri, hvor billederne blender sammen frem for at
         blive inde for grid linjerne.
       </p>
+      <p></p>
+      <img src="" alt="" />
+      <img src="" alt="" />
       <h3>Præsentation</h3>
       <p></p>
       <h4>Se det færdige produkt her:</h4>
