--- a/emnesite.html
+++ b/emnesite.html
@@ -34,9 +34,13 @@
       <h1>Emnesite</h1>
       <h2>Tema</h2>
       <p>
-        Temaet hvavde til formål at give erfaring med udvalgte UX/UI-metoder og
-        lære at præsentere vores design- og udviklingsproces samt formidle
-        research- og testresultater til interessenter.
+        User Experience Design (UX) er en central del af udviklingen af digitale
+        brugergrænseflader (UI). Dette tema giver en grundlæggende forståelse
+        for samspillet mellem brugere og brugergrænseflader og introducerer
+        teorier, værktøjer og metoder til research, design og test i digital
+        produktudvikling. Temaet hvavde til formål at give erfaring med udvalgte
+        UX/UI-metoder og lære at præsentere vores design- og udviklingsproces
+        samt formidle research- og testresultater til interessenter.
       </p>
       <h3>Opgave</h3>
       <p>
@@ -74,9 +78,18 @@
         lave et dynamisk galleri, hvor billederne blender sammen frem for at
         blive inde for grid linjerne.
       </p>
-      <p></p>
-      <img src="" alt="" />
-      <img src="" alt="" />
+      <p>
+        I HTML gives sektionen for galleriet klassen 'container' og billederne
+        klassen 'galleri'. I CSS bruges klasserne så ledes 'container' bruges
+        til at definere breden, koloner og kolone mellemrum. 'Galleri' bruges
+        til at definere størrelsen på billederne, mellemrum fra billede til
+        billede og til sidst 'break-inside: avoid;' for at billederne samler sig
+        frem for at ligge på kolone linjerne.
+      </p>
+      <section class="grid_1-1">
+        <img src="img/html_em.webp" alt="HTML struktur" />
+        <img src="img/css_em.webp" alt="CSS struktur" />
+      </section>
       <h3>Præsentation</h3>
       <p></p>
       <h4>Se det færdige produkt her:</h4>
