--- a/emnesite.html
+++ b/emnesite.html
@@ -34,13 +34,14 @@
       <h1>Emnesite</h1>
       <h2>Tema</h2>
       <p>
-        User Experience Design (UX) er en central del af udviklingen af digitale
-        brugergrænseflader (UI). Dette tema giver en grundlæggende forståelse
-        for samspillet mellem brugere og brugergrænseflader og introducerer
-        teorier, værktøjer og metoder til research, design og test i digital
-        produktudvikling. Temaet hvavde til formål at give erfaring med udvalgte
-        UX/UI-metoder og lære at præsentere vores design- og udviklingsproces
-        samt formidle research- og testresultater til interessenter.
+        I dette tema blev vi introduceret til User Experience Design (UX), som
+        er en central del af udviklingen af digitale brugergrænseflader (UI).
+        Dette tema gav en grundlæggende forståelse for samspillet mellem brugere
+        og brugergrænseflader og introducerede teorier, værktøjer og metoder til
+        research, design og test i digital produktudvikling. Temaet havde til
+        formål at give erfaring med udvalgte UX/UI-metoder og lære at præsentere
+        vores design- og udviklingsproces samt formidle research- og
+        testresultater til interessenter.
       </p>
       <h3>Opgave</h3>
       <p>
