--- a/website.html
+++ b/website.html
@@ -33,13 +33,13 @@
       <h1>Website</h1>
       <h2>Tema</h2>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore dolores
-        quaerat corporis autem nobis veniam, ducimus debitis quam unde atque
-        tempore labore, praesentium hic sit? Adipisci minus placeat quibusdam
-        animi totam quos natus voluptates? Facere animi eaque autem maxime,
-        delectus alias praesentium ratione, ad beatae repudiandae optio ipsum
-        impedit eveniet omnis nobis vitae iste dolore quis laboriosam tempora
-        repellat in mollitia?
+        I dette tema bliv vi introduceret til de grundlæggende og mest anvendte
+        redskaber i en multimediedesigners værktøjskasse. Disse redskaber danner
+        fundamentet for resten af uddannelsen på MMD. Vi blev introduceres til
+        grundlæggende begreber inden for design af digitale brugergrænseflader,
+        digital indholdsproduktion, digital kommunikation og responsivt
+        webdesign. Der blev undervist i HTML og CSS, samt grundlæggende
+        færdigheder i grafikopsætning af tekst og billeder i Figma.
       </p>
       <h3>Opgave</h3>
       <p>
