--- a/spil.html
+++ b/spil.html
@@ -33,7 +33,27 @@
     <main>
       <h1>Spil</h1>
       <h2>Tema</h2>
+      <p>
+        I dette tema blev vi introduceret til programmeringssproget JavaScript,
+        som kan bruges til at kode dynamiske websites. I dette tema brugte vi
+        JavaScript sammen med CSS-animationer til at skabe et lille spil.
+        Formålet med dette tema er, at du begynder at arbejde professionelt med
+        formgivning af grafiske elementer. Vi vil analysere spildesign og
+        undersøge, hvordan man engagerer brugere gennem teori og konventioner
+        inden for UI-elementer, figurelementer, baggrundsdesign og
+        kompositionsteknikker. Du udvikler dit eget spildesign efter moderne
+        konventioner og rentegner grafikken til spillet i Adobe Illustrator.
+        Gennem arbejdet med dit eget spil lærer du at arbejde med aktivitets- og
+        statemachine-diagrammer, som bruges til at planlægge det mere
+        komplicerede interaktive flow. Principperne fra CSS og JavaScript, som
+        du lærer her, vil du senere i uddannelsen kunne videreføre til at
+        udvikle mere avancerede websites.
+      </p>
       <h3>Opgave</h3>
+      <p>
+        Spillet skal have et koncept og en idé, som du selv finder frem til, og
+        du skal designe alle elementer og kode spillet helt fra bunden.
+      </p>
       <h4>Spil idé</h4>
       <h4>Design</h4>
       <h4>Kodet spil</h4>
