--- a/passion.html
+++ b/passion.html
@@ -33,14 +33,25 @@
     <main>
       <h1>Passionsite</h1>
       <h2>Tema</h2>
+      <p>
+        I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
+        herunder præproduktion, selve produktionen samt postproduktion. Vi
+        benytter smartphonekameraer til optagelse af video og ekstern lyd og
+        anvender Premiere Pro til redigering. Dette er væsentligt for at kunne
+        lave mindre indholdsproduktioner selv, samt for bedre at kunne
+        kommunikere professionelt med kunder. Vi arbejde også med animeret
+        vektorgrafik (Lottiefiles). Vi bliv introduceret til grundlæggende
+        faglige begreber inden for indholdsproduktion, og vi benyttede derudover
+        de færdigheder, som vi havde fået i de foregående temaer, til at
+        redesigne en virksomhedshjemmeside.
+      </p>
       <h3>Opgave</h3>
+      <p>I denne opgave</p>
       <h4>Forbereding til opgavelse</h4>
       <h4>Optagelse</h4>
       <h4>Video</h4>
       <h4>Billeder</h4>
       <h4>Hero section</h4>
-
-      <h4>Kode</h4>
       <h4>Se det færdige produkt her:</h4>
       <a href="https://idaholmterp.dk/kea/04_animation/website/index.html"
         >Website</a
