--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -33,6 +33,18 @@
     <main>
       <h1>virksomhedsite</h1>
       <h2>Tema</h2>
+      <p>
+        I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
+        herunder præproduktion, selve produktionen samt postproduktion. Vi
+        benytter smartphonekameraer til optagelse af video og ekstern lyd og
+        anvender Premiere Pro til redigering. Dette er væsentligt for at kunne
+        lave mindre indholdsproduktioner selv, samt for bedre at kunne
+        kommunikere professionelt med kunder. Vi arbejde også med animeret
+        vektorgrafik (Lottiefiles). Vi bliv introduceret til grundlæggende
+        faglige begreber inden for indholdsproduktion, og vi benyttede derudover
+        de færdigheder, som vi havde fået i de foregående temaer, til at
+        redesigne en virksomhedshjemmeside.
+      </p>
       <h3>Opgave</h3>
     </main>
     <footer class="grid_1-1-1">
