Tema beskrivelse virksomhedsite

--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -46,6 +46,29 @@
         redesigne en virksomhedshjemmeside.
       </p>
       <h3>Opgave</h3>
+      <p>
+        I denne opgave skulle vi prøve kræfter med at redesigne en selvvalgt
+        virksomheds website. Redesignet skulle munde ud i et kodet website og
+        indeholde indholdsproduktioner i form af fx tekst, foto, LottieFiles og
+        video. Dette var et gruppeprojekt.
+      </p>
+      <h4>Idéudvikling</h4>
+      <p>
+        Ud fra vores valgte website Klodshans, begynde vi at idéudvikle på
+        hvordan design af hjemmesiden skulle se ud. I denne del af processen
+        lavede vi moodboards og styletile.
+      </p>
+      <h4>Indholdsproduktion</h4>
+      <p>
+        For at vise virksomheden bedste frem tog vi ud og lavede optagelser og
+        tog billeder til sitet. Derudover brugte vi tekst og billeder, der
+        allerede var på sitet, samt vektorgrafik som vi tegnede i Illustator.
+      </p>
+      <h4>Test</h4>
+      <h4>Se det færdige produkt her:</h4>
+      <a href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
+        >Website</a
+      >
     </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
