Link til færdige site

--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -65,6 +65,7 @@
         allerede var på sitet, samt vektorgrafik som vi tegnede i Illustator.
       </p>
       <h4>Test</h4>
+      <p>Efter at havde kodet vores</p>
       <h4>Se det færdige produkt her:</h4>
       <a href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
         >Website</a
