--- a/website.html
+++ b/website.html
@@ -31,22 +31,29 @@
     </header>
     <main>
       <h1>Website</h1>
-      <h2>Tema</h2>
-      <p>
-        I dette tema bliv vi introduceret til de grundlæggende og mest anvendte
-        redskaber i en multimediedesigners værktøjskasse. Disse redskaber danner
-        fundamentet for resten af uddannelsen på MMD. Vi blev introduceres til
-        grundlæggende begreber inden for design af digitale brugergrænseflader,
-        digital indholdsproduktion, digital kommunikation og responsivt
-        webdesign. Der blev undervist i HTML og CSS, samt grundlæggende
-        færdigheder i grafikopsætning af tekst og billeder i Figma.
-      </p>
-      <h3>Opgave</h3>
-      <p>
-        I website opgaven skulle vi lave et website ud fra udleveret wireframes
-        og layoutsiagrammer. Dette skulle vi gøre ved brug af HTML til at
-        opbygge siden, og CSS til styling og layout.
-      </p>
+      <section class="grid_1-1">
+        <div>
+          <h2>Tema</h2>
+          <p>
+            I dette tema bliv vi introduceret til de grundlæggende og mest
+            anvendte redskaber i en multimediedesigners værktøjskasse. Disse
+            redskaber danner fundamentet for resten af uddannelsen på MMD. Vi
+            blev introduceres til grundlæggende begreber inden for design af
+            digitale brugergrænseflader, digital indholdsproduktion, digital
+            kommunikation og responsivt webdesign. Der blev undervist i HTML og
+            CSS, samt grundlæggende færdigheder i grafikopsætning af tekst og
+            billeder i Figma.
+          </p>
+        </div>
+        <div>
+          <h3>Opgave</h3>
+          <p>
+            I website opgaven skulle vi lave et website ud fra udleveret
+            wireframes og layoutsiagrammer. Dette skulle vi gøre ved brug af
+            HTML til at opbygge siden, og CSS til styling og layout.
+          </p>
+        </div>
+      </section>
       <section class="grid_1-1">
         <div>
           <h4>Wireframes</h4>
