--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -32,26 +32,28 @@
     </header>
     <main>
       <h1>virksomhedsite</h1>
-      <h2>Tema</h2>
-      <p>
-        I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
-        herunder præproduktion, selve produktionen samt postproduktion. Vi
-        benytter smartphonekameraer til optagelse af video og ekstern lyd og
-        anvender Premiere Pro til redigering. Dette er væsentligt for at kunne
-        lave mindre indholdsproduktioner selv, samt for bedre at kunne
-        kommunikere professionelt med kunder. Vi arbejde også med animeret
-        vektorgrafik (Lottiefiles). Vi bliv introduceret til grundlæggende
-        faglige begreber inden for indholdsproduktion, og vi benyttede derudover
-        de færdigheder, som vi havde fået i de foregående temaer, til at
-        redesigne en virksomhedshjemmeside.
-      </p>
-      <h3>Opgave</h3>
-      <p>
-        I denne opgave skulle vi prøve kræfter med at redesigne en selvvalgt
-        virksomheds website. Redesignet skulle munde ud i et kodet website og
-        indeholde indholdsproduktioner i form af fx tekst, foto, LottieFiles og
-        video. Dette var et gruppeprojekt.
-      </p>
+      <section class="temaopgave">
+        <h2>Tema</h2>
+        <p>
+          I dette tema fik vi grundlæggende indførsel i indholdsproduktion,
+          herunder præproduktion, selve produktionen samt postproduktion. Vi
+          benytter smartphonekameraer til optagelse af video og ekstern lyd og
+          anvender Premiere Pro til redigering. Dette er væsentligt for at kunne
+          lave mindre indholdsproduktioner selv, samt for bedre at kunne
+          kommunikere professionelt med kunder. Vi arbejde også med animeret
+          vektorgrafik (Lottiefiles). Vi bliv introduceret til grundlæggende
+          faglige begreber inden for indholdsproduktion, og vi benyttede
+          derudover de færdigheder, som vi havde fået i de foregående temaer,
+          til at redesigne en virksomhedshjemmeside.
+        </p>
+        <h3>Opgave</h3>
+        <p>
+          I denne opgave skulle vi prøve kræfter med at redesigne en selvvalgt
+          virksomheds website. Redesignet skulle munde ud i et kodet website og
+          indeholde indholdsproduktioner i form af fx tekst, foto, LottieFiles
+          og video. Dette var et gruppeprojekt.
+        </p>
+      </section>
       <h4>Idéudvikling</h4>
       <p>
         Ud fra vores valgte website Klodshans, begynde vi at idéudvikle på
