--- a/emnesite.html
+++ b/emnesite.html
@@ -32,22 +32,45 @@
     </header>
     <main>
       <h1>Emnesite</h1>
-      <h2>Tema</h2>
-      <p>
-        I dette tema blev vi introduceret til User Experience Design (UX), som
-        er en central del af udviklingen af digitale brugergrænseflader (UI).
-        Dette tema gav en grundlæggende forståelse for samspillet mellem brugere
-        og brugergrænseflader og introducerede teorier, værktøjer og metoder til
-        research, design og test i digital produktudvikling. Temaet havde til
-        formål at give erfaring med udvalgte UX/UI-metoder og lære at præsentere
-        vores design- og udviklingsproces samt formidle research- og
-        testresultater til interessenter.
-      </p>
-      <h3>Opgave</h3>
-      <p>
-        For at få erfaring med overstående fik vi 4 uger til at lavet et website
-        om et valgfrit emne.
-      </p>
+      <section class="grid_1-1">
+        <div>
+          <h2>Tema</h2>
+          <p>
+            I dette tema blev vi introduceret til User Experience Design (UX),
+            som er en central del af udviklingen af digitale brugergrænseflader
+            (UI). Dette tema gav en grundlæggende forståelse for samspillet
+            mellem brugere og brugergrænseflader og introducerede teorier,
+            værktøjer og metoder til research, design og test i digital
+            produktudvikling. Temaet havde til formål at give erfaring med
+            udvalgte UX/UI-metoder og lære at præsentere vores design- og
+            udviklingsproces samt formidle research- og testresultater til
+            interessenter.
+          </p>
+          <h3>Opgave</h3>
+          <p>
+            For at få erfaring med overstående fik vi 4 uger til at lavet et
+            website om et valgfrit emne.
+          </p>
+        </div>
+        <div class="grid_1-1">
+          <div class="boks">
+            <h3>Min rolle</h3>
+            <ul>
+              <li>Programør</li>
+              <li>Designer</li>
+              <li>Udvikler</li>
+            </ul>
+          </div>
+          <div class="boks">
+            <h3>Nye færdigheder</h3>
+            <ul>
+              <li>Figma</li>
+              <li>Squoosh</li>
+              <li>Brugertest</li>
+            </ul>
+          </div>
+        </div>
+      </section>
       <h3>research og idé</h3>
       <p>
         I starten af processen for emnesitet gik vi igang med idégenering som
