--- a/spil.html
+++ b/spil.html
@@ -9,7 +9,7 @@
     <title>Spil</title>
   </head>
   <body>
-    <header>
+    <header class="grid_1-1-1">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -19,9 +19,7 @@
         <!-- navigation (overlay content)-->
         <div class="overlay-content">
           <a href="website.html">Tema 2</a>
-
           <a href="emnesite.html">Tema 3</a>
-
           <a href="spil.html">Tema 4</a>
           <a href="passion.html">Tema 5 opgave 1</a>
           <a href="virksomhedsite.html">Tema 5 opgave 2</a>
@@ -29,6 +27,8 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
+      <img src="img/forside.webp" alt="" />
+      <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
       <h1>Spil</h1>
