--- a/ommig.html
+++ b/ommig.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="grid_1-1-1">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -27,6 +27,8 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
+      <img src="img/forside.webp" alt="" />
+      <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
       <h1>Om mig</h1>
