--- a/website.html
+++ b/website.html
@@ -31,38 +31,44 @@
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <h1>Website</h1>
-      <section class="grid_1-1">
-        <div>
-          <h2>Tema</h2>
-          <p>
-            I dette tema bliv vi introduceret til de grundlæggende og mest
-            anvendte redskaber i en multimediedesigners værktøjskasse. Disse
-            redskaber danner fundamentet for resten af uddannelsen på MMD. Vi
-            blev introduceres til grundlæggende begreber inden for design af
-            digitale brugergrænseflader, digital indholdsproduktion, digital
-            kommunikation og responsivt webdesign. Der blev undervist i HTML og
-            CSS, samt grundlæggende færdigheder i grafikopsætning af tekst og
-            billeder i Figma.
-          </p>
-        </div>
-        <div>
-          <h3>Opgave</h3>
-          <p>
-            I website opgaven skulle vi lave et website ud fra udleveret
-            wireframes og layoutsiagrammer. Dette skulle vi gøre ved brug af
-            HTML til at opbygge siden, og CSS til styling og layout.
-          </p>
+      <h1 class="overskrift">Website</h1>
+      <section class="baggrund">
+        <div class="flex">
+          <div class="grid_1-1">
+            <div>
+              <h2>Tema</h2>
+              <p>
+                I dette tema bliv vi introduceret til de grundlæggende og mest
+                anvendte redskaber i en multimediedesigners værktøjskasse. Disse
+                redskaber danner fundamentet for resten af uddannelsen på MMD.
+                Vi blev introduceres til grundlæggende begreber inden for design
+                af digitale brugergrænseflader, digital indholdsproduktion,
+                digital kommunikation og responsivt webdesign. Der blev
+                undervist i HTML og CSS, samt grundlæggende færdigheder i
+                grafikopsætning af tekst og billeder i Figma.
+              </p>
+            </div>
+            <div>
+              <h3>Opgave</h3>
+              <p>
+                I website opgaven skulle vi lave et website ud fra udleveret
+                wireframes og layoutsiagrammer. Dette skulle vi gøre ved brug af
+                HTML til at opbygge siden, og CSS til styling og layout.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
-      <section class="grid_1-1">
-        <div>
-          <h4>Wireframes</h4>
-          <img src="img/wireframe_website.png" alt="" />
-        </div>
-        <div>
-          <h4>Layoutdiagram</h4>
-          <img src="img/layoutdiagram_website.png" alt="" />
+      <section class="">
+        <div class="grid_1-1">
+          <div>
+            <h4>Wireframes</h4>
+            <img src="img/wireframe_website.png" alt="" />
+          </div>
+          <div>
+            <h4>Layoutdiagram</h4>
+            <img src="img/layoutdiagram_website.png" alt="" />
+          </div>
         </div>
       </section>
       <h4>HTML</h4>
